--- a/project.config
+++ b/project.config
@@ -1,2 +1,10 @@
 [project]
 	state = active
+[access "refs/*"]
+	owner = group Administrators
+[access "refs/heads/*"]
+	owner = group SEMC Maintainers
+	push = group SEMC Maintainers
+	label-Code-Review = -2..+2 group SEMC Maintainers
+	label-Verified = -1..+1 group SEMC Maintainers
+	submit = group SEMC Maintainers
