Modified project settings

--- a/project.config
+++ b/project.config
@@ -8,3 +8,5 @@
 	label-Code-Review = -2..+2 group SEMC Maintainers
 	label-Verified = -1..+1 group SEMC Maintainers
 	submit = group SEMC Maintainers
+[receive]
+	requireContributorAgreement = true
