--- a/project.config
+++ b/project.config
@@ -3,10 +3,10 @@
 [access "refs/*"]
 	owner = group Administrators
 [access "refs/heads/*"]
-	owner = group SEMC Maintainers
 	push = group SEMC Maintainers
 	label-Code-Review = -2..+2 group SEMC Maintainers
 	label-Verified = -1..+1 group SEMC Maintainers
 	submit = group SEMC Maintainers
+	create = group SEMC Maintainers
 [receive]
 	requireContributorAgreement = true
