--- a/project.config
+++ b/project.config
@@ -7,5 +7,6 @@
 	label-Code-Review = -2..+2 group SEMC Maintainers
 	label-Verified = -1..+1 group SEMC Maintainers
 	submit = group SEMC Maintainers
+	create = group SEMC Maintainers
 [receive]
 	requireContributorAgreement = true
