--- a/project.config
+++ b/project.config
@@ -9,3 +9,5 @@
 	create = group SEMC Maintainers
 [receive]
 	requireContributorAgreement = true
+[access]
+	inheritFrom = CyanogenMod/android_device_sony_fuji-common
